Adjusted launch scripts